💄 Style: UI/스타일 파일 추가/수정

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400;500;600;700&display=swap');
+
 *{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: 'IBM Plex Sans KR', sans-serif;
 }
 ul,li{
   list-style: none;
@@ -12,6 +15,7 @@ img{
 
 button{
   background-color: transparent;
+  color: black;
   border: none;
   cursor: pointer;
 }
