--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,7 +31,12 @@ body {
   
 }
 body::-webkit-scrollbar {
-  display: none;
+  width: 10px;
+  background: rgba(0, 0, 0, 0);
+}
+body::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 30px;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
